Make Maven build possible with the new repo
This required:
- Importing some settings from Linux Tools's top-level pom.xml
- Maven'ifying our target plugin, and adding some missing elements
  (Wikitext, Antlr sources)

Change-Id: Id3db846ad90f1e6cfec97fe3a5189d41ae9b1b27
Signed-off-by: Alexandre Montplaisir <alexmonthy@voxpopuli.im>