@@ -17,12 +17,6 @@
     <maven>3.0</maven>
   </prerequisites>
 
-  <parent>
-    <groupId>org.eclipse.linuxtools</groupId>
-    <artifactId>linuxtools-parent</artifactId>
-    <version>3.2.0-SNAPSHOT</version>
-  </parent>
-
   <groupId>org.eclipse.linuxtools.lttng</groupId>
   <artifactId>linuxtools-lttng-parent</artifactId>
   <version>3.2.0-SNAPSHOT</version>
@@ -46,22 +40,31 @@
 
 <properties>
   <base.test.vmargs>-Xms256m -Xmx1024m -XX:MaxPermSize=256m</base.test.vmargs>
+  <tycho-version>0.21.0</tycho-version>
+  <target-platform>lttng-e4.4</target-platform>
+  <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+  <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+  <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+  <sonar.java.source>1.7</sonar.java.source>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 </properties>
+
+<pluginRepositories>
+  <pluginRepository>
+    <id>repo.eclipse.org</id>
+    <url>https://repo.eclipse.org/content/groups/releases/</url>
+  </pluginRepository>
+  <pluginRepository>
+    <id>tycho-snapshots</id>
+    <url>https://repo.eclipse.org/content/repositories/tycho-snapshots/</url>
+  </pluginRepository>
+</pluginRepositories>
 
 <profiles>
   <profile>
     <id>tracingRcp</id>
       <modules>
         <module>org.eclipse.linuxtools.tracing.rcp.product</module>
-      </modules>
-  </profile>
-  <profile>
-    <id>lttngPackage</id>
-      <properties>
-          <lttngPackageDestination>/var/www/tools/linuxtools/lttng/update-nightly/</lttngPackageDestination>
-      </properties>
-      <modules>
-        <module>org.eclipse.linuxtools.lttng.releng-site</module>
       </modules>
   </profile>
   <profile>
@@ -138,6 +141,8 @@
     <module>org.eclipse.linuxtools.tmf.analysis.xml.ui.tests</module>
 
     <module>org.eclipse.linuxtools.lttng.help</module>
+    <module>org.eclipse.linuxtools.lttng.releng-site</module>
+    <module>org.eclipse.linuxtools.lttng.target</module>
     <module>org.eclipse.linuxtools.lttng.testing</module>
 
     <module>org.eclipse.linuxtools.lttng2.control</module>
@@ -209,6 +214,14 @@
                             <arch>x86_64</arch>
                         </environment>
                     </environments>
+                    <target>
+                      <artifact>
+                        <groupId>org.eclipse.linuxtools.lttng</groupId>
+                        <artifactId>org.eclipse.linuxtools.lttng.target</artifactId>
+                        <classifier>${target-platform}</classifier>
+                        <version>1.0.0</version>
+                      </artifact>
+                    </target>
                     <filters>
                       <filter>
                         <type>eclipse-plugin</type>
@@ -226,7 +239,137 @@
                 <version>${tycho-version}</version>
                 <extensions>true</extensions>
             </plugin>
-        </plugins>
-    </build>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-source-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <executions>
+            <execution>
+              <id>plugin-source</id>
+              <goals>
+                <goal>plugin-source</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-source-feature-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <configuration>
+            <includeBinaryFeature>false</includeBinaryFeature>
+          </configuration>
+          <executions>
+            <execution>
+              <id>source-feature</id>
+              <phase>package</phase>
+              <goals>
+                <goal>source-feature</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.7.2.201409121644</version>
+          <executions>
+            <execution>
+             <id>pre-test</id>
+             <goals>
+               <goal>prepare-agent</goal>
+             </goals>
+             <configuration>
+                <!-- Where to put jacoco coverage report -->
+                <destFile>${sonar.jacoco.reportPath}</destFile>
+                <includes>
+                  <include>org.eclipse.linuxtools.*</include>
+                </includes>
+                <append>true</append>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-test</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+              <configuration>
+                <dataFile>${sonar.jacoco.reportPath}</dataFile>
+              </configuration>
+            </execution>
+          </executions>
+      </plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-compiler-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <configuration>
+            <encoding>UTF-8</encoding>
+            <compilerArguments>
+              <properties>${project.basedir}/.settings/org.eclipse.jdt.core.prefs</properties>
+            </compilerArguments>
+          </configuration>
+	 </plugin>
+	<plugin>
+	  <groupId>org.eclipse.tycho</groupId>
+	  <artifactId>tycho-surefire-plugin</artifactId>
+	  <version>${tycho-version}</version>
+	  <configuration>
+	    <useUIHarness>true</useUIHarness>
+	    <useUIThread>true</useUIThread>
+            <dependencies>
+               <dependency>
+                 <type>p2-installable-unit</type>
+                 <artifactId>org.eclipse.platform.feature.group</artifactId>
+                 <version>${sdk-version}</version>
+               </dependency>
+            </dependencies>
+            <product>org.eclipse.platform.ide</product>
+ 	    <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
+	  </configuration>
+	</plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-versions-plugin</artifactId>
+          <version>${tycho-version}</version>
+        </plugin>
+	<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+            <encoding>UTF-8</encoding>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.7</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.4</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>2.7</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.9.1</version>
+          <configuration>
+            <excludePackageNames>org.eclipse.linuxtools.internal.*:*.test*</excludePackageNames>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
